# dandelion

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE.Hippocratic-2.1  README.md  rustfmt.toml
agents/dandelion-agent-maildrop/: Cargo.toml
agents/dandelion-agent-maildrop/src/: lib.rs
crates/dandelion-agent-host/: Cargo.toml
crates/dandelion-agent-host/src/: instance.rs  lib.rs
crates/dandelion-agent-host/src/collection/: external.rs  mod.rs
crates/dandelion-agent-lib/: Cargo.toml
crates/dandelion-agent-lib/src/: lib.rs
crates/dandelion-wire/: Cargo.toml
crates/dandelion-wire/src/: encryptable.rs  error.rs  lib.rs  macros.rs  printable.rs  serializable.rs  signable.rs  util.rs  uuid.rs
crates/dandelion-wire/src/cryptography/: cipher.rs  digest.rs  ecdh.rs  hkdf.rs  kdf.rs  mod.rs  sig.rs
docs/decisions/: Cryptography.md
src/: attestation.rs  block.rs  claim.rs  constants.rs  entity.rs  envelope.rs  lib.rs  macros.rs  message.rs  priority.rs  time.rs
