[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Donald “chronos” King <chronos@chronos-tachyon.net>"]
license = "GPL-3.0-only OR Hippocratic-2.1"

[workspace.dependencies]
#dandelion-macros = { path = "crates/dandelion-macros", version = "0.1.0" }
#dandelion-proto = { path = "crates/dandelion-proto", version = "0.1.0" }
#dandelion-wit = { path = "crates/dandelion-wit", version = "0.1.0" }
#dandelion-host-wit = { path = "crates/dandelion-host-wit", version = "0.1.0" }
#dandelion-types = { path = "crates/dandelion-types", version = "0.1.0" }
dandelion-wire = { path = "crates/dandelion-wire", version = "0.1.0" }
bytes = { version = "1.7.1", default-features = false }
proc-macro2 = { version = "1.0.86" }
prost = { version = "0.13.1", default-features = false, features = ["derive"] }
prost-build = { version = "0.13.1" }
prost-types = { version = "0.13.1", default-features = false }
protox = { version = "0.7.0" }
quote = { version = "1.0.36" }
syn = { version = "2.0.72" }
wasmtime = { version = "23.0.1", default-features = false, features = ["component-model", "runtime", "cranelift", "async", "threads"] }
wit-bindgen = { version = "0.28.0" }
zeroize = { version = "1.8.1", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package]
name = "dandelion"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dandelion-wire.workspace = true

[[bin]]
name = "dandelion"
