[package]
name = "dandelion-agent-maildrop"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
export = ["dandelion-agent-lib/export"]

[dependencies]
dandelion-agent-lib.workspace = true
gethostname.workspace = true

[lib]
crate-type = ["cdylib"]
