[package]
name = "dandelion-wire"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake2s_simd.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
constant_time_eq.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
