[package]
name = "dandelion-wire"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
zeroize.workspace = true
constant_time_eq.workspace = true
cryptoxide = { workspace = true, features = ["blake2", "chacha", "poly1305", "ed25519", "x25519", "hkdf"] }
